--- a/src/_partials/_variables.hbs
+++ b/src/_partials/_variables.hbs
@@ -14,7 +14,7 @@ set $right_screen HDMI3
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DroidSansMono, FontAwesome 10
+font pango:monospace 10
 
 # Colours
 set $base00 #272822
@@ -63,8 +63,8 @@ set $ws10 "10 &#xf001;"
 default_border pixel
 hide_edge_borders smart
 
-# Client colors
-client.focused $base01 $base01 $base0B $base0B
-client.focused_inactive $base01 $base01 $base07 $base07
-client.unfocused $base02 $base02 $base04 $base04
-client.urgent $base02 $base08 $base07 $base08
+# Client colors - subdued to match waybar
+client.focused $base00 $base00 $base0B $base0B
+client.focused_inactive $base00 $base00 $base03 $base03
+client.unfocused $base00 $base00 $base03 $base03
+client.urgent $base00 $base00 $base08 $base08
