--- a/src/.config/waybar/style.css
+++ b/src/.config/waybar/style.css
@@ -21,14 +21,19 @@ window#waybar {
     border-bottom: 2px solid transparent;
 }
 
-#workspaces button:hover {
-    background-color: #383830;
+#workspaces button.visible {
     color: #a59f85;
+    border-bottom: 2px solid #49483e;
 }
 
 #workspaces button.focused {
     color: #a6e22e;
     border-bottom: 2px solid #a6e22e;
+}
+
+#workspaces button:hover {
+    background: #383830;
+    color: #a59f85;
 }
 
 #workspaces button.urgent {
